Update ShopSphere full project