@@ -2,10 +2,11 @@ package com.shopsphere.backend.security;
 
 import com.shopsphere.backend.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -17,7 +18,10 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+
+        return List.of(
+                new SimpleGrantedAuthority("ROLE_" + user.getRole())
+        );
     }
 
     @Override
@@ -28,6 +32,11 @@ public class CustomUserDetails implements UserDetails {
     @Override
     public String getUsername() {
         return user.getEmail();
+    }
+
+    // Get Logged-in User ID
+    public Long getUserId() {
+        return user.getId();
     }
 
     @Override
